<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.code7.prog4tent_android.presentation.activities.FilmDetailActivity">

    <TextView
        android:id="@+id/film_id_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_id" />

    <TextView
        android:id="@+id/film_title_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_title" />

    <TextView
        android:id="@+id/film_description_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_description" />

    <TextView
        android:id="@+id/film_releaseyear_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_release_year" />

    <TextView
        android:id="@+id/film_languageID_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_language_id" />

    <TextView
        android:id="@+id/film_original_languageID_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_original_language_id" />

    <TextView
        android:id="@+id/film_rental_duration_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_rental_duration" />

    <TextView
        android:id="@+id/film_rental_rate_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_rental_rate" />

    <TextView
        android:id="@+id/film_length_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_length" />

    <TextView
        android:id="@+id/film_replacement_cost_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_replacement_cost" />

    <TextView
        android:id="@+id/film_rating_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_rating" />

    <TextView
        android:id="@+id/film_special_features_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_special_features" />

    <TextView
        android:id="@+id/film_last_update_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/film_last_update" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/film_rent_movie" />

</LinearLayout>
