<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/row_vertical_margin"
    android:paddingLeft="@dimen/row_horizontal_margin"
    android:paddingRight="@dimen/row_horizontal_margin"
    android:paddingTop="@dimen/row_vertical_margin">

    <TextView
        android:id="@+id/film_item_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="?attr/colorAccent"
        android:textSize="16sp"
        tools:text="@string/film_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/film_rating_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/film_rating" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5.7"
            android:text="@string/euro"
            tools:text="@string/euro" />

        <TextView
            android:id="@+id/film_cost_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/film_cost" />
    </LinearLayout>

</LinearLayout>
