<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.code7.prog4tent_android.presentation.activities.RentalDetailActivity">

    <TextView
        android:id="@+id/rental_title_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_title" />

    <TextView
        android:id="@+id/rental_description_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/film_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rental_date_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/film_rental_date" />

        <TextView
            android:id="@+id/rental_date_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/film_rental_date" />

        <TextView
            android:id="@+id/rental_return_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rental_return_date" />

        <TextView
            android:id="@+id/rental_return_date_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rental_return_date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rental_return_movie" />
    </LinearLayout>

</LinearLayout>
